View: 멘토 게시글 리스트 뷰 수정

--- a/api/src/main/resources/templates/article/list.html
+++ b/api/src/main/resources/templates/article/list.html
@@ -183,6 +183,7 @@
             } else if (membership === 'mentor') {
                 card.style.border = "1px solid #04B404";
                 card.style.backgroundColor = "#D0F5A9";
+                card.style.backgroundImage = "url('https://mblogthumb-phinf.pstatic.net/20160519_269/jango53_1463667087444tpAQQ_GIF/jango_p10.gif?type=w2')"
             }
         });
 
