View: 게시글 리스트 카드색 수정

--- a/api/src/main/resources/templates/article/list.html
+++ b/api/src/main/resources/templates/article/list.html
@@ -174,15 +174,15 @@
         cards.forEach(card => {
             const membership = card.getAttribute('data-userrole');
             if(membership === 'premium') {
-                card.style.border = "1px solid #2E2EFE";
-                card.style.backgroundColor = "#CEE3F6";
+                card.style.border = "1px solid #BDBDBD";
+                card.style.backgroundColor = "#f1f2f5";
                 card.style.backgroundImage = "url('https://mblogthumb-phinf.pstatic.net/20160519_47/jango53_1463667092361tjBiX_GIF/jango_p33.gif?type=w2')"
             } else if (membership === 'free') {
                 card.style.border = "1px solid #BDBDBD";
                 card.style.backgroundColor = "#f1f2f5";
             } else if (membership === 'mentor') {
-                card.style.border = "1px solid #04B404";
-                card.style.backgroundColor = "#D0F5A9";
+                card.style.border = "1px solid #BDBDBD";
+                card.style.backgroundColor = "#f1f2f5";
                 card.style.backgroundImage = "url('https://mblogthumb-phinf.pstatic.net/20160519_269/jango53_1463667087444tpAQQ_GIF/jango_p10.gif?type=w2')"
             }
         });
