Refactor: 멘토링 코드 리팩토링

--- a/api/src/main/resources/templates/mentoring/detailMentoring.html
+++ b/api/src/main/resources/templates/mentoring/detailMentoring.html
@@ -160,7 +160,7 @@
                 return false;
             }
 
-            var isPremium = [[${@rq.member.isPremium()}]];
+            var isPremium = [[${@rq.member.isPremium() or @rq.member.isMentor()}]];
 
             if (!isPremium) {
                 toastWarning('프리미엄 회워만 신청 가능합니다.');
