--- a/api/src/main/resources/templates/member/applyMentor.html
+++ b/api/src/main/resources/templates/member/applyMentor.html
@@ -9,7 +9,7 @@
 <main layout:fragment="main" class="container my-3 mx-auto">
     <div class="flex justify-center items-center min-h-screen">
         <div class="w-96 bg-white p-8 rounded-lg">
-            <h2 class="text-2xl font-semibold mb-4">대충 멘토 지원하는 창</h2>
+            <h2 class="text-2xl font-semibold mb-4">멘토 지원 테스트 폼</h2>
             <form action="/member/applyMentor" method="POST">
                 <div class="flex">
                     <p class="mr-2">당신은 멘토입니까?</p>
