Refactor: 일반 유저도 채팅 가능하도록 수정

--- a/api/src/main/resources/templates/chat/room.html
+++ b/api/src/main/resources/templates/chat/room.html
@@ -97,13 +97,13 @@
         .wrap .ch2 .textbox {
             margin-right: 20px;
             max-width: 500px;
-            background-color: #9ba2af;
+            background-color: #a8adb4;
         }
 
         .wrap .ch2 .textbox::before {
             right: -15px;
             content: "▶";
-            color: #9ba2af;
+            color: #a8adb4;
         }
         #msgArea {
             height: 650px;
