--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -87,7 +87,7 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 글</h3>
                 <div class="space-y-2">
-                    <div th:each="article, loop: ${articles}">
+                    <div th:each="article, loop: ${memberContent.articles}">
                         <a th:if="${loop.index} < 5"
                            th:href="@{|/article/detail/${article.id}|}"
                            th:text="${article.title}"
@@ -103,7 +103,7 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">내가 쓴 댓글</h3>
                 <div class="space-y-2">
-                    <div th:each="comment, loop : ${comments}">
+                    <div th:each="comment, loop : ${memberContent.comments}">
                         <a th:if="${loop.index} < 5"
                            th:href="@{|/article/detail/${comment.article.id}|}"
                            th:text="${comment.content.length() > 25 ? comment.content.substring(0, 25) + '...' : comment.content}"
@@ -119,7 +119,7 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">이력서 검토 내용</h3>
                 <div class="space-y-2">
-                    <div th:each="prediction, loop : ${predictions}">
+                    <div th:each="prediction, loop : ${memberContent.predictions}">
                         <div th:if="${prediction.serviceType == T(com.goodjob.resume.domain.ServiceType).EXPECTED_ADVICE}">
                             <a th:if="${loop.index} < 3"
                                th:href="@{|/resumes/detail/${prediction.id}|}"
@@ -133,7 +133,7 @@
             <div class="mb-4">
                 <h3 class="text-2xl font-semibold mb-4 mt-4">면접 예상 질문 내용</h3>
                 <div class="space-y-2">
-                    <div th:each="prediction, loop : ${predictions}">
+                    <div th:each="prediction, loop : ${memberContent.predictions}">
                         <div th:if="${prediction.serviceType == T(com.goodjob.resume.domain.ServiceType).EXPECTED_QUESTION}">
                             <a th:if="${loop.index < 3}"
                                th:href="@{|/resumes/detail/${prediction.id}|}"
