Fix: 내가 쓴 댓글 전체보기 url, 페이징 오류 수정

--- a/api/src/main/resources/templates/member/me.html
+++ b/api/src/main/resources/templates/member/me.html
@@ -110,7 +110,7 @@
                            class="text-xs w-16 text-center ml-2" style="color: gray;">댓글내용</a>
                     </div>
                     <div class="flex justify-content: flex-end">
-                        <a href="/article/show/list" class="text-xs w-16 text-center"
+                        <a href="/comment/show/list" class="text-xs w-16 text-center"
                            style="margin-left: auto; color: gray;">>전체보기</a>
                     </div>
                 </div>
