--- a/api/src/main/resources/templates/member/myComments.html
+++ b/api/src/main/resources/templates/member/myComments.html
@@ -32,7 +32,7 @@
             </div>
 
             <!-- 페이징처리 시작 -->
-            <div th:if="${paging != null}" class="flex justify-center mb-6">
+            <div th:if="${!paging.isEmpty()}" class="flex justify-center mb-6">
                 <div class="flex">
                     <a class="page-link btn btn-sm btn-ghost grid-0 m-1" th:href="@{|?page=${paging.number-1}|}"
                        th:classappend="${!paging.hasPrevious} ? 'invisible'">
